Agregar .trivycache al archivo .gitignore